<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_2"
            android:title="@string/blood_request" />
        <item
            android:id="@+id/userprofile"
            android:icon="@drawable/ic_profile_overview_2"
            android:title="@string/profile" />
        <item
            android:id="@+id/user_achiev"
            android:icon="@drawable/ic_menu_achievements"
            android:title="@string/achiev" />

        <item
            android:id="@+id/blood_storage"
            android:icon="@drawable/ic_find_donor"
            android:title="@string/fndBlood" />
        <item
            android:id="@+id/nearby_hospital"
            android:icon="@drawable/ic_find_hospital"
            android:title="@string/nearH" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/lgout" />
    </group>
</menu>