<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/red"
    tools:context=".ui.activities.MainActivity"
    android:theme="@style/Theme.BloodBank">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_cover_logo">

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/circle"
            android:contentDescription="@string/nav_header_desc"
            android:src="@mipmap/blood_bank_ic_launcher_foreground" />

        <com.example.bloodbank.utils.MSPTextViewBold
            android:layout_marginTop="10dp"
            android:id="@+id/UserNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/widget_edittext_dark"
            android:textStyle="bold"
            android:textSize="@dimen/et_textSize"/>

        <com.example.bloodbank.utils.MSPTextViewBold
            android:gravity="center"
            android:id="@+id/UserEmailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/nav_header_subtitle"
            android:textColor="@android:color/widget_edittext_dark"
            android:textSize="@dimen/et_textSize"/>

    </LinearLayout>

</LinearLayout>